--- a/checkout.html
+++ b/checkout.html
@@ -296,6 +296,35 @@ h2 {
   z-index: 1;
   display: none;
 }
+
+@media (max-width: 700px) {
+  .checkout-table th.desc-col, 
+  .checkout-table td.desc-col {
+    display: none;
+  }
+}
+
+@media (max-width: 700px) {
+  .checkout-table th, .checkout-table td {
+    font-size: 0.92em;
+    padding: 6px 6px;
+  }
+  .checkout-table td.product-col {
+    min-width: 40vw !important;
+    max-width: 42vw !important;
+  }
+  .checkout-table th.compact-col, 
+  .checkout-table td.compact-col {
+    min-width: 12vw !important;
+    max-width: 15vw !important;
+    text-align: center;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+  .table-wrapper {
+    overflow-x: auto;
+  }
+}
 </style>
 </head>
 <body>
@@ -487,3 +516,4 @@ if (window.location.pathname.endsWith("thankyou.html") && sessionStorage.getItem
 </script>
 </body>
 </html>
+
